--- a/Terms.html
+++ b/Terms.html
@@ -129,5 +129,5 @@ Calibri;color:#595959;mso-themecolor:text1;mso-themetint:166;"><strong><bdt clas
       }
     </style>
       </div>
-      </body
+</body>
 </html>
